# chascale-server

./: .gitignore  BUILD  README.md  WORKSPACE  main.go
config/: chascale-server-service.yaml  chascale-server-statefulset.yaml
data/: BUILD.bazel  message.go
examples/go-client/: BUILD.bazel  client.go
k8s/: BUILD.bazel  cluster.go
server/: BUILD.bazel  conn.go  handler.go  hub.go  memeberlist.go
