load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "conn.go",
        "handler.go",
        "hub.go",
    ],
    importpath = "github.com/chascale/chascale-server/server",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gorilla_websocket//:go_default_library"],
)
