load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["client.go"],
    importpath = "github.com/chascale/chascale-server/examples/go-client",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_google_uuid//:go_default_library",
        "@com_github_gorilla_websocket//:go_default_library",
    ],
)

go_binary(
    name = "go-client",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
